altv-capi/client/altv-capi.hpp


struct alt_String {
    char * data;
    unsigned long long size;
};
CAPI unsigned long long alt_String_GetSize(struct alt_String* _instance);
CAPI _Bool alt_String_Equals_String(struct alt_String* _instance, struct alt_String* that);
CAPI _Bool alt_String_NotEquals_String(struct alt_String* _instance, struct alt_String* that);
CAPI char* alt_String_CStr(struct alt_String* _instance);
struct alt_StringView {
    const char * data;
    unsigned long long size;
};
CAPI void alt_StringView_free(struct alt_StringView* ptr);
CAPI struct alt_StringView* alt_StringView_Create(char* _data, unsigned long long _size);
CAPI struct alt_StringView* alt_StringView_Create_1();
CAPI struct alt_StringView* alt_StringView_Create_2(char* _str);
CAPI struct alt_StringView* alt_StringView_Create_4(struct alt_String* _str);
CAPI _Bool alt_StringView_IsEmpty(struct alt_StringView* _instance);
CAPI char* alt_StringView_GetData(struct alt_StringView* _instance);
CAPI unsigned long long alt_StringView_GetSize(struct alt_StringView* _instance);
CAPI char alt_StringView_Access_uint64_t(struct alt_StringView* _instance, unsigned long long key);
CAPI _Bool alt_StringView_Equals_StringView(struct alt_StringView* _instance, struct alt_StringView* that);
CAPI _Bool alt_StringView_NotEquals_StringView(struct alt_StringView* _instance, struct alt_StringView* that);
CAPI struct alt_String* alt_StringView_To_String(struct alt_StringView* _instance);
CAPI char* alt_StringView_CStr(struct alt_StringView* _instance);
CAPI struct alt_StringView* alt_StringView_Create_6(struct alt_StringView* _p0);
CAPI struct alt_StringView* alt_StringView_Create_7(struct alt_StringView* _p0);
CAPI void alt_StringView_Assign_constStringViewRef(struct alt_StringView* _instance, struct alt_StringView* _p0);
CAPI void alt_StringView_Assign_StringViewRefRef(struct alt_StringView* _instance, struct alt_StringView* _p0);
struct alt_RGBA {
    unsigned char r;
    unsigned char g;
    unsigned char b;
    unsigned char a;
};
CAPI void alt_RGBA_free(struct alt_RGBA* ptr);
CAPI struct alt_RGBA* alt_RGBA_Create();
CAPI struct alt_RGBA* alt_RGBA_Create_1(unsigned char _r, unsigned char _g, unsigned char _b, unsigned char _a);
struct alt_Array_MValue {
    struct alt_MValue* data;
    unsigned long long size;
    unsigned long long capacity;
};
CAPI struct alt_Array_MValue* alt_Array_MValue_Create();
CAPI struct alt_Array_MValue* alt_Array_MValue_Create_1(struct alt_MValue* _data, unsigned long long _size);
CAPI struct alt_Array_MValue* alt_Array_MValue_Create_2(unsigned long long _size, struct alt_MValue* fill);
CAPI struct alt_Array_MValue* alt_Array_MValue_Create_3(struct alt_Array_MValue* that);
CAPI struct alt_Array_MValue* alt_Array_MValue_Create_4(struct alt_Array_MValue* that);
CAPI void alt_Array_MValue_Assign_constArray_MValueRef(struct alt_Array_MValue* _instance, struct alt_Array_MValue* that);
CAPI void alt_Array_MValue_Assign_Array_MValueRefRef(struct alt_Array_MValue* _instance, struct alt_Array_MValue* that);
CAPI void alt_Array_MValue_Push(struct alt_Array_MValue* _instance, struct alt_MValue* el);
CAPI unsigned long long alt_Array_MValue_GetSize(struct alt_Array_MValue* _instance);
CAPI unsigned long long alt_Array_MValue_GetCapacity(struct alt_Array_MValue* _instance);
CAPI struct alt_MValue* alt_Array_MValue_Access_uint64_t(struct alt_Array_MValue* _instance, unsigned long long key);
CAPI struct alt_MValue* alt_Array_MValue_Access_uint64_t_1(struct alt_Array_MValue* _instance, unsigned long long key);
CAPI struct alt_MValue* alt_Array_MValue_begin(struct alt_Array_MValue* _instance);
CAPI struct alt_MValue* alt_Array_MValue_begin_1(struct alt_Array_MValue* _instance);
CAPI struct alt_MValue* alt_Array_MValue_end(struct alt_Array_MValue* _instance);
CAPI struct alt_MValue* alt_Array_MValue_end_1(struct alt_Array_MValue* _instance);
struct alt_Array_String {
    struct alt_String* data;
    unsigned long long size;
    unsigned long long capacity;
};
CAPI struct alt_Array_String* alt_Array_String_Create();
CAPI struct alt_Array_String* alt_Array_String_Create_1(struct alt_String* _data, unsigned long long _size);
CAPI struct alt_Array_String* alt_Array_String_Create_2(unsigned long long _size, struct alt_String* fill);
CAPI struct alt_Array_String* alt_Array_String_Create_3(struct alt_Array_String* that);
CAPI struct alt_Array_String* alt_Array_String_Create_4(struct alt_Array_String* that);
CAPI void alt_Array_String_Assign_constArray_StringRef(struct alt_Array_String* _instance, struct alt_Array_String* that);
CAPI void alt_Array_String_Assign_Array_StringRefRef(struct alt_Array_String* _instance, struct alt_Array_String* that);
CAPI void alt_Array_String_Push(struct alt_Array_String* _instance, struct alt_String* el);
CAPI unsigned long long alt_Array_String_GetSize(struct alt_Array_String* _instance);
CAPI unsigned long long alt_Array_String_GetCapacity(struct alt_Array_String* _instance);
CAPI struct alt_String* alt_Array_String_Access_uint64_t(struct alt_Array_String* _instance, unsigned long long key);
CAPI struct alt_String* alt_Array_String_Access_uint64_t_1(struct alt_Array_String* _instance, unsigned long long key);
CAPI struct alt_String* alt_Array_String_begin(struct alt_Array_String* _instance);
CAPI struct alt_String* alt_Array_String_begin_1(struct alt_Array_String* _instance);
CAPI struct alt_String* alt_Array_String_end(struct alt_Array_String* _instance);
CAPI struct alt_String* alt_Array_String_end_1(struct alt_Array_String* _instance);
struct alt_Array_StringView {
    struct alt_StringView* data;
    unsigned long long size;
    unsigned long long capacity;
};
struct alt_MValue {
    enum alt_MValue_Type type;
    struct alt_MValue_Storage* storage;
};
enum alt_MValue_Type {
    ALT_MVALUE_TYPE_NIL = 0,
    ALT_MVALUE_TYPE_BOOL = 1,
    ALT_MVALUE_TYPE_INT = 2,
    ALT_MVALUE_TYPE_UINT = 3,
    ALT_MVALUE_TYPE_DOUBLE = 4,
    ALT_MVALUE_TYPE_STRING = 5,
    ALT_MVALUE_TYPE_LIST = 6,
    ALT_MVALUE_TYPE_DICT = 7,
    ALT_MVALUE_TYPE_ENTITY = 8,
    ALT_MVALUE_TYPE_FUNCTION = 9
};