client/src/altv_capi.rs

 :: raw :: c_char ; } extern "C" { pub fn alt_String_GetSize ( _instance : * mut alt_String ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_String_Equals_String ( _instance : * mut alt_String , that : * mut alt_String ) -> bool ; } extern "C" { pub fn alt_String_NotEquals_String ( _instance : * mut alt_String , that : * mut alt_String ) -> bool ; } extern "C" { pub fn alt_String_CStr ( _instance : * mut alt_String ) -> * mut :: std :: os :: raw :: c_char ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_StringView { pub data : * const :: std :: os :: raw :: c_char , pub size : :: std :: os :: raw :: c_ulonglong , } # [ test ] fn bindgen_test_layout_alt_StringView ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_StringView > ( ) , 16usize , concat ! ( "Size of: " , stringify ! ( alt_StringView ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_StringView > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_StringView ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_StringView > ( ) ) ) . data as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_StringView ) , "::" , stringify ! ( data ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_StringView > ( ) ) ) . size as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_StringView ) , "::" , stringify ! ( size ) ) ) ; } extern "C" { pub fn alt_StringView_free ( ptr : * mut alt_StringView ) ; } extern "C" { pub fn alt_StringView_Create ( _data : * mut :: std :: os :: raw :: c_char , _size : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_StringView ; } extern "C" { pub fn alt_StringView_Create_1 ( ) -> * mut alt_StringView ; } extern "C" { pub fn alt_StringView_Create_2 ( _str : * mut :: std :: os :: raw :: c_char ) -> * mut alt_StringView ; } extern "C" { pub fn alt_StringView_Create_4 ( _str : * mut alt_String ) -> * mut alt_StringView ; } extern "C" { pub fn alt_StringView_IsEmpty ( _instance : * mut alt_StringView ) -> bool ; } extern "C" { pub fn alt_StringView_GetData ( _instance : * mut alt_StringView ) -> * mut :: std :: os :: raw :: c_char ; } extern "C" { pub fn alt_StringView_GetSize ( _instance : * mut alt_StringView ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_StringView_Access_uint64_t ( _instance : * mut alt_StringView , key : :: std :: os :: raw :: c_ulonglong ) -> :: std :: os :: raw :: c_char ; } extern "C" { pub fn alt_StringView_Equals_StringView ( _instance : * mut alt_StringView , that : * mut alt_StringView ) -> bool ; } extern "C" { pub fn alt_StringView_NotEquals_StringView ( _instance : * mut alt_StringView , that : * mut alt_StringView ) -> bool ; } extern "C" { pub fn alt_StringView_To_String ( _instance : * mut alt_StringView ) -> * mut alt_String ; } extern "C" { pub fn alt_StringView_CStr ( _instance : * mut alt_StringView ) -> * mut :: std :: os :: raw :: c_char ; } extern "C" { pub fn alt_StringView_Create_6 ( _p0 : * mut alt_StringView ) -> * mut alt_StringView ; } extern "C" { pub fn alt_StringView_Create_7 ( _p0 : * mut alt_StringView ) -> * mut alt_StringView ; } extern "C" { pub fn alt_StringView_Assign_constStringViewRef ( _instance : * mut alt_StringView , _p0 : * mut alt_StringView ) ; } extern "C" { pub fn alt_StringView_Assign_StringViewRefRef ( _instance : * mut alt_StringView , _p0 : * mut alt_StringView ) ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_RGBA { pub r : :: std :: os :: raw :: c_uchar , pub g : :: std :: os :: raw :: c_uchar , pub b : :: std :: os :: raw :: c_uchar , pub a : :: std :: os :: raw :: c_uchar , } # [ test ] fn bindgen_test_layout_alt_RGBA ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_RGBA > ( ) , 4usize , concat ! ( "Size of: " , stringify ! ( alt_RGBA ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_RGBA > ( ) , 1usize , concat ! ( "Alignment of " , stringify ! ( alt_RGBA ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RGBA > ( ) ) ) . r as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_RGBA ) , "::" , stringify ! ( r ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RGBA > ( ) ) ) . g as * const _ as usize } , 1usize , concat ! ( "Offset of field: " , stringify ! ( alt_RGBA ) , "::" , stringify ! ( g ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RGBA > ( ) ) ) . b as * const _ as usize } , 2usize , concat ! ( "Offset of field: " , stringify ! ( alt_RGBA ) , "::" , stringify ! ( b ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_RGBA > ( ) ) ) . a as * const _ as usize } , 3usize , concat ! ( "Offset of field: " , stringify ! ( alt_RGBA ) , "::" , stringify ! ( a ) ) ) ; } extern "C" { pub fn alt_RGBA_free ( ptr : * mut alt_RGBA ) ; } extern "C" { pub fn alt_RGBA_Create ( ) -> * mut alt_RGBA ; } extern "C" { pub fn alt_RGBA_Create_1 ( _r : :: std :: os :: raw :: c_uchar , _g : :: std :: os :: raw :: c_uchar , _b : :: std :: os :: raw :: c_uchar , _a : :: std :: os :: raw :: c_uchar ) -> * mut alt_RGBA ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Array_MValue { pub data : * mut alt_MValue , pub size : :: std :: os :: raw :: c_ulonglong , pub capacity : :: std :: os :: raw :: c_ulonglong , } # [ test ] fn bindgen_test_layout_alt_Array_MValue ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_Array_MValue > ( ) , 24usize , concat ! ( "Size of: " , stringify ! ( alt_Array_MValue ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_Array_MValue > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_Array_MValue ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_MValue > ( ) ) ) . data as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_MValue ) , "::" , stringify ! ( data ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_MValue > ( ) ) ) . size as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_MValue ) , "::" , stringify ! ( size ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_MValue > ( ) ) ) . capacity as * const _ as usize } , 16usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_MValue ) , "::" , stringify ! ( capacity ) ) ) ; } extern "C" { pub fn alt_Array_MValue_Create ( ) -> * mut alt_Array_MValue ; } extern "C" { pub fn alt_Array_MValue_Create_1 ( _data : * mut alt_MValue , _size : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_Array_MValue ; } extern "C" { pub fn alt_Array_MValue_Create_2 ( _size : :: std :: os :: raw :: c_ulonglong , fill : * mut alt_MValue ) -> * mut alt_Array_MValue ; } extern "C" { pub fn alt_Array_MValue_Create_3 ( that : * mut alt_Array_MValue ) -> * mut alt_Array_MValue ; } extern "C" { pub fn alt_Array_MValue_Create_4 ( that : * mut alt_Array_MValue ) -> * mut alt_Array_MValue ; } extern "C" { pub fn alt_Array_MValue_Assign_constArray_MValueRef ( _instance : * mut alt_Array_MValue , that : * mut alt_Array_MValue ) ; } extern "C" { pub fn alt_Array_MValue_Assign_Array_MValueRefRef ( _instance : * mut alt_Array_MValue , that : * mut alt_Array_MValue ) ; } extern "C" { pub fn alt_Array_MValue_Push ( _instance : * mut alt_Array_MValue , el : * mut alt_MValue ) ; } extern "C" { pub fn alt_Array_MValue_GetSize ( _instance : * mut alt_Array_MValue ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_Array_MValue_GetCapacity ( _instance : * mut alt_Array_MValue ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_Array_MValue_Access_uint64_t ( _instance : * mut alt_Array_MValue , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_MValue ; } extern "C" { pub fn alt_Array_MValue_Access_uint64_t_1 ( _instance : * mut alt_Array_MValue , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_MValue ; } extern "C" { pub fn alt_Array_MValue_begin ( _instance : * mut alt_Array_MValue ) -> * mut alt_MValue ; } extern "C" { pub fn alt_Array_MValue_begin_1 ( _instance : * mut alt_Array_MValue ) -> * mut alt_MValue ; } extern "C" { pub fn alt_Array_MValue_end ( _instance : * mut alt_Array_MValue ) -> * mut alt_MValue ; } extern "C" { pub fn alt_Array_MValue_end_1 ( _instance : * mut alt_Array_MValue ) -> * mut alt_MValue ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Array_String { pub data : * mut alt_String , pub size : :: std :: os :: raw :: c_ulonglong , pub capacity : :: std :: os :: raw :: c_ulonglong , } # [ test ] fn bindgen_test_layout_alt_Array_String ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_Array_String > ( ) , 24usize , concat ! ( "Size of: " , stringify ! ( alt_Array_String ) ) ) ; assert_eq ! ( :: std :: mem :: align_of :: < alt_Array_String > ( ) , 8usize , concat ! ( "Alignment of " , stringify ! ( alt_Array_String ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_String > ( ) ) ) . data as * const _ as usize } , 0usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_String ) , "::" , stringify ! ( data ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_String > ( ) ) ) . size as * const _ as usize } , 8usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_String ) , "::" , stringify ! ( size ) ) ) ; assert_eq ! ( unsafe { & ( * ( :: std :: ptr :: null :: < alt_Array_String > ( ) ) ) . capacity as * const _ as usize } , 16usize , concat ! ( "Offset of field: " , stringify ! ( alt_Array_String ) , "::" , stringify ! ( capacity ) ) ) ; } extern "C" { pub fn alt_Array_String_Create ( ) -> * mut alt_Array_String ; } extern "C" { pub fn alt_Array_String_Create_1 ( _data : * mut alt_String , _size : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_Array_String ; } extern "C" { pub fn alt_Array_String_Create_2 ( _size : :: std :: os :: raw :: c_ulonglong , fill : * mut alt_String ) -> * mut alt_Array_String ; } extern "C" { pub fn alt_Array_String_Create_3 ( that : * mut alt_Array_String ) -> * mut alt_Array_String ; } extern "C" { pub fn alt_Array_String_Create_4 ( that : * mut alt_Array_String ) -> * mut alt_Array_String ; } extern "C" { pub fn alt_Array_String_Assign_constArray_StringRef ( _instance : * mut alt_Array_String , that : * mut alt_Array_String ) ; } extern "C" { pub fn alt_Array_String_Assign_Array_StringRefRef ( _instance : * mut alt_Array_String , that : * mut alt_Array_String ) ; } extern "C" { pub fn alt_Array_String_Push ( _instance : * mut alt_Array_String , el : * mut alt_String ) ; } extern "C" { pub fn alt_Array_String_GetSize ( _instance : * mut alt_Array_String ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_Array_String_GetCapacity ( _instance : * mut alt_Array_String ) -> :: std :: os :: raw :: c_ulonglong ; } extern "C" { pub fn alt_Array_String_Access_uint64_t ( _instance : * mut alt_Array_String , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_String ; } extern "C" { pub fn alt_Array_String_Access_uint64_t_1 ( _instance : * mut alt_Array_String , key : :: std :: os :: raw :: c_ulonglong ) -> * mut alt_String ; } extern "C" { pub fn alt_Array_String_begin ( _instance : * mut alt_Array_String ) -> * mut alt_String ; } extern "C" { pub fn alt_Array_String_begin_1 ( _instance : * mut alt_Array_String ) -> * mut alt_String ; } extern "C" { pub fn alt_Array_String_end ( _instance : * mut alt_Array_String ) -> * mut alt_String ; } extern "C" { pub fn alt_Array_String_end_1 ( _instance : * mut alt_Array_String ) -> * mut alt_String ; } # [ repr ( C ) ] # [ derive ( Debug , Copy , Clone ) ] pub struct alt_Array_StringView { pub data : * mut alt_StringView , pub size : :: std :: os :: raw :: c_ulonglong , pub capacity : :: std :: os :: raw :: c_ulonglong , } # [ test ] fn bindgen_test_layout_alt_Array_StringView ( ) { assert_eq ! ( :: std :: mem :: size_of :: < alt_Arr